# SweeperKeeper

./: .gitignore  .replit  Pasted-OperationalError-sqlalchemy-exc-OperationalError-psycopg2-OperationalError-SSL-connection-has-be-1729743985264.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-pythonlibs-lib-python3-11-site-p-1729687015205.txt  README.md  analytics.py  app.py  casino_bot.db  casino_locator.py  check_schema.py  check_user_schema.py  coin_claimer.py  config.py  database.py  extensions.py  forms.py  load_balancer.py  main.py  manage.py  models.py  package-lock.json  package.json  pyproject.toml  replit.nix  requirements.txt  routes.py  scheduler.py  sweeper_keeper.db  user_interface.py  utils.py
SweeperKeeperMobile/: App.js  api.js  app.json  package-lock.json  package.json
migrations/versions/: 5d2f3496fcd7_update_user_model.py  b204e4367b96_initial_migration.py
static/css/: main.css
static/js/: main.js
templates/: add_account.html  add_casino.html  analytics.html  base.html  dashboard.html  index.html  login.html  register.html  responsible_gaming.html
