[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.9",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-wtf",
    "trafilatura>=1.12.2",
    "beautifulsoup4>=4.12.3",
    "selenium>=4.25.0",
    "schedule>=1.2.2",
    "cryptography>=43.0.1",
    "requests>=2.32.3",
]
